# constbin

./: CMakeLists.txt  README  TODO  blobindex.cpp  blobindex.hpp  constbin.cpp  constbinutils.cpp  constbinutils.hpp
example/: CMakeLists.txt  printsource.c
